fix title spacing for low width layout

--- a/app/public/css/main.styl
+++ b/app/public/css/main.styl
@@ -136,6 +136,7 @@ body
                         text-align: center
 
                 a#name
+                    margin-top: 2em
                     width: 100%
                     display: block
                     margin: 0
